Доработка продаж и бекэнда
Была полностью переработана страница продаж (удаление сильных связей между элементами). Также все классы бекэнда были сделаны статичесскими.

--- a/DataBaseLab/SaleView/Sale Blank.xaml
+++ b/DataBaseLab/SaleView/Sale Blank.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="25"/>
             <RowDefinition/>
             <RowDefinition Height="25"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition x:Name="ChangeRow" Height="0"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -55,6 +55,23 @@
         <ScrollViewer Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2" Margin="49.667,0,0,0">
             <StackPanel x:Name="CourtViewer"/>
         </ScrollViewer>
-        <Grid Grid.ColumnSpan="4" Grid.Row="3" Width="575"/>
+        <Grid Grid.ColumnSpan="3" Grid.Row="3" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+            <Rectangle Fill="LightGray"/>
+            <Rectangle Fill="DarkGray" Grid.Column="1"/>
+            <Rectangle x:Name="AcceptBtm" Fill="LightGray" Grid.Column="2" MouseDown="AcceptBtm_MouseDown"/>
+            <Rectangle x:Name="AbortBtm"  Fill="DarkGray" Grid.Column="3" MouseDown="AbortBtm_MouseDown"/>
+
+            <TextBlock x:Name="ProdName" Foreground="Gray" Text="Имя продукта" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBox x:Name="InsertAmount" Background="DarkGray" Text="0" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" PreviewTextInput="InsertAmount_PreviewTextInput"/>
+
+            <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE710;" Foreground="Black" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"  MouseDown="AcceptBtm_MouseDown"/>
+            <TextBlock FontFamily="Segoe MDL2 Assets" Text="&#xE711;" Foreground="Black" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" MouseDown="AbortBtm_MouseDown"/>
+        </Grid>
     </Grid>
 </Page>
